# dieseltest

./: Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yaml
migrations/2023-01-01-000000_create_users/: up.sql
pgbouncer/: pgbouncer.ini  userlist.txt
src/: main.rs  models.rs  schema.rs
