[package]
name = "rust_app"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.7.4", features = ["http1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
rand = "0.8"
fake = { version = "2.9", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1.1.0", features = ["full", "server"] }
hyper-util = { version = "0.1.2", features = ["tokio"] }